--- a/styles/architect.css
+++ b/styles/architect.css
@@ -6,6 +6,19 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+.btn-primary{
+    border-radius: 8px;
+    background-color: #FF900E;
+    color: #fff;
+    border: none;
+    padding: 20px 25px;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-bottom: 50px;
+    margin-top: 32px;
+}
+
 /* header style */
 
 header{
@@ -59,4 +72,33 @@ nav li a {
     color: #727272;
     font-size: 16px;
     font-weight: 400;
+}
+
+.banner img{
+    width: 100%;
+}
+
+/* Responsive media queries */
+/* mobile devices */
+
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+
+}
+
+/* tablet or medium devices */
+
+@media screen and (min-width:576px) and (max-width:992px) {
+    header{
+        padding: 20px;
+    }
+    
+    nav{
+        flex-direction: column;
+    }
 }
