--- a/styles/architect.css
+++ b/styles/architect.css
@@ -102,3 +102,43 @@ nav li a {
         flex-direction: column;
     }
 }
+/* Responsive media queries end (header-section) */
+
+/* main styles */
+main{
+    max-width: 1440px;
+    margin: 0px auto;
+}
+
+/* teams style */
+
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.teams-content{
+    padding-right: 70px;
+    padding-left: 70px;
+}
+
+.teams-title{
+   font-size: 2.8rem;
+}
+
+.teams-title .quick-list {
+    color: #727272;
+    font-weight: 500;
+}
+
+.teams-title .features{
+    color: #FF900E;
+    font-weight: 700;
+
+}
