--- a/styles/architect.css
+++ b/styles/architect.css
@@ -77,40 +77,15 @@ nav li a {
 .banner img{
     width: 100%;
 }
-
-/* Responsive media queries */
-/* mobile devices */
-
-@media screen and (max-width:576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-
-}
-
-/* tablet or medium devices */
-
-@media screen and (min-width:576px) and (max-width:992px) {
-    header{
-        padding: 20px;
-    }
-    
-    nav{
-        flex-direction: column;
-    }
-}
-/* Responsive media queries end (header-section) */
+/* header style end */
 
 /* main styles */
 main{
     max-width: 1440px;
-    margin: 0px auto;
+    margin: 80px auto;
 }
 
-/* teams style */
+/* teams style start */
 
 .teams-container{
     display: flex;
@@ -140,5 +115,47 @@ main{
 .teams-title .features{
     color: #FF900E;
     font-weight: 700;
+}
+
+.teams-description{
+    color: #727272;
+    font-size: 16px;
+    font-weight: 400;
+}
+/* teams style end */
+
+/* Responsive media queries start*/
+/* mobile devices */
+
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav,.teams-container{
+        flex-direction: column;
+    }
+
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+
+    .teams-content{
+        text-align: center;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 
 }
+
+/* tablet or medium devices */
+
+@media screen and (min-width:576px) and (max-width:992px) {
+    header{
+        padding: 20px;
+    }
+    
+    nav, .teams-container{
+        flex-direction: column;
+    }
+}
+/* Responsive media queries end */
