--- a/styles/architect.css
+++ b/styles/architect.css
@@ -167,6 +167,36 @@ main{
     margin-top: 5px;
 
 }
+/* facts style end */
+
+
+/* Sponsors section style start */
+
+.sponsors-container{
+    text-align: center;
+}
+
+.sponsors-title{
+    color: #131313;
+    font-size:45px ;
+    font-weight:700 ;
+}
+
+.sponsors-description{
+    color:#727272 ;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.sponsors-img-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+/* Sponsors section style end */
+
+
 
 /* Responsive media queries start*/
 /* mobile devices */
@@ -175,7 +205,11 @@ main{
     header{
         padding: 20px;
     }
-    nav,.teams-container{
+    nav,
+    .teams-container,
+    .facts-cards-container,
+    .sponsors-img-container{
+        
         flex-direction: column;
     }
 
@@ -183,10 +217,24 @@ main{
         grid-template-columns: 1fr;
     }
 
-    .teams-content{
+    .teams-content, .facts-cards-container{
         text-align: center;
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    .facts-cards-container{
+        gap: 40px;
+    }
+
+    .facts-cards-container{
+        margin: auto;
+    }
+
+    .sponsors-img-container{
+        width: 165px;
+        gap: 20px;
+        
     }
 
 }
@@ -200,6 +248,11 @@ main{
     
     nav, .teams-container{
         flex-direction: column;
+    }
+
+    .facts-cards-container{
+        gap: 20px;
+        margin: auto;
     }
 }
 /* Responsive media queries end */
