--- a/styles/architect.css
+++ b/styles/architect.css
@@ -196,7 +196,26 @@ main{
 
 /* Sponsors section style end */
 
+/* footer style start  */
 
+footer{
+    border-radius: 8px;
+    background: #FFF4E7;
+    width: 1440px;
+    height: 100px;
+    background-position: center;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 80px;
+}
+
+footer > p{
+    color: #424242;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 38px 410px;
+}
+/* footer style end */
 
 /* Responsive media queries start*/
 /* mobile devices */
